--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -50,5 +50,8 @@ Django需要使用Psycopg2 2.0.9或更高版本.
 Django在数据库链接需要以下参数:
 
 - `client_encoding : 'UTF8'`
+- `default_transaction_isolation: 'read committed'` 默认地, 或者在连接选项(connection options)中设置此值(见下面)
+- `timezone: 'UTC'` 当`USE_TZ'为`'True`时, 否则设置`TIME_ZONE`的值.
+
 
 
