--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -54,4 +54,9 @@ Django在数据库链接需要以下参数:
 - `timezone: 'UTC'` 当`USE_TZ'为`'True`时, 否则设置`TIME_ZONE`的值.
 
 
+如果这些参数已经是正确的值, Django不会在每次新的链接设置他们, 这会稍许(slightly)提升性能(performance). 你可以直接在`postgresql.conf`
+中设置它们, 或者更简便在每个数据库使用者(database user)中使用`ALTER ROLE`设置.
+
+没有这些设置Django也会很好的工作, 但是每个新的链接会需要对设置这些参数做一些额外的查询.
+
 
