--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -50,13 +50,26 @@ Django需要使用Psycopg2 2.0.9或更高版本.
 Django在数据库链接需要以下参数:
 
 - `client_encoding : 'UTF8'`
-- `default_transaction_isolation: 'read committed'` 默认地, 或者在连接选项(connection options)中设置此值(见下面)
-- `timezone: 'UTC'` 当`USE_TZ'为`'True`时, 否则设置`TIME_ZONE`的值.
-
+- `default_transaction_isolation`: `'read committed'` 默认地, 或者在连接选项(connection options)中设置此值(见下面)
+- `timezone: 'UTC'` 当`USE_TZ`为`True`时, 否则设置`TIME_ZONE`的值.
 
 如果这些参数已经是正确的值, Django不会在每次新的链接设置他们, 这会稍许(slightly)提升性能(performance). 你可以直接在`postgresql.conf`
 中设置它们, 或者更简便在每个数据库使用者(database user)中使用`ALTER ROLE`设置.
 
 没有这些设置Django也会很好的工作, 但是每个新的链接会需要对设置这些参数做一些额外的查询.
 
-### 
+###  隔离层(ISOLATION LEVEL)
+就像PostgreSQL自身, Django默认`READ COMMITTED`为隔离层. 如果你需要更一个更高级别的隔离层,例如`REPEATABLE READ`
+或者`SERIALIZABLE`, 在数据库配置文件中的`DATABASES`选项中的`OPITIONS`部分设置它:
+```
+import psycopg2.extensions
+
+DATABASES = {
+    # ...
+    'OPTIONS': {
+        'isolation_level': psycopg2.extensions.ISOLATION_LEVEL_SERIALIZABLE,
+    },
+}
+
+```
+
