--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -72,4 +72,10 @@ DATABASES = {
 }
 
 ```
+在更高的隔离层之下, 你的应用应该做好处理准备, 来处理由序列化(serialization)失败引起的异常. 这个选项是为了高级用法
+而设计的.
 
+### 为VARCHAR和TEXT列索引
+当在你的模型字段上指定`db_index=True`时, Django代表性地(typically)输出一个单独的`CREATE INDEX`语句. 然而, 如果
+如果你的数据库字段类型是`carchar`或者`text`(通过`CharField`,`FileField`和`TextField`使用), 那么Django将会创建
+一个额外的索引, 此索引为那个列(column)使用一个合适的PostgreSQL 类操作符(operator class).  
