--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -78,4 +78,34 @@ DATABASES = {
 ### 为VARCHAR和TEXT列索引
 当在你的模型字段上指定`db_index=True`时, Django代表性地(typically)输出一个单独的`CREATE INDEX`语句. 然而, 如果
 如果你的数据库字段类型是`carchar`或者`text`(通过`CharField`,`FileField`和`TextField`使用), 那么Django将会创建
-一个额外的索引, 此索引为那个列(column)使用一个合适的PostgreSQL 类操作符(operator class).  
+一个额外的索引, 此索引为那个列(column)使用一个合适的PostgreSQL 类操作符(operator class). 在它们的SQL中, 要使用`LIKE` 
+操作符来正确地执行查询(lookup), 那么额外的索引(index)就是必须的, 就如同使用`contains`和`startswith`查询类型来完成一样.
+
+## MySQL Notes
+
+### 支持版本
+Django支持MySQL 5.5和更高的版本.
+
+Django的`inspectdb`(检查数据库)功能使用`information_schema`(信息概要)数据库,  它包含了了所有数据库schemas(概要)的的细节数据.
+
+Django希望数据库支持Unicode(UTF-8编码), 并且将强制事务处理(enforce transactions)任务和引用完整性任务(referential integerity)
+委托给数据库. 当时用MyISAM储存引擎时, 后两种(two latter ones)(个人理解为前面所说的强制转换任务和引用完整性任务)是不会被MySQL强制(执行)的, 清楚地知道这个事实是很重要的.
+
+### 储存引擎(storage engines)
+MySQL有数种储存引擎. 你可以在数种配置(server configuration)中改变默认储存引擎.
+
+直到MySQL 5.5.4, 默认引擎都是MyISAM. MyISAM的主要缺点(drawbacks)是它不支持事务处理(transactions)或者强制foreign-key约束(constraints).
+从优点来说, 直到MySQL 5.6.4, 它是唯一支持full-text索引(indexing)和搜索的引擎.
+
+自从MySQL 5.5.5, 默认的引擎是InnoDB. 这个引擎是完全事务性(fully transactional)的, 并且支持外键引用(foreign key references).
+现在, 它可能是最好的选择. 然而, 注意在一个MySQL重启(restart)时, InnovativeDB自动增量(autoincrement)计数器会发生丢失现象. 这是因为它
+不能记住`AUTO_INCREMENT`的值, 取而代之的是它作为`max(id)+1`重新创建. 这可能导致`AutoField`的值在无意间重复使用(reuse).
+
+如果你将现存的项目升级到MySQL 5.5.5, 接着(subsequently)添加一些表(table), 清确保你的表(table)使用相同的储存引擎(也就是MyISAM或者InnoDB).
+特别的, 如果一个表在它们之间有一个外键(ForeignKey), 并使用不同的储存引擎, 当运行`migrate`时, 你可能看见如下错误:
+```
+_mysql_exceptions.OperationalError: (
+    1005, "Can't create table '\\db_name\\.#sql-4a8_ab' (errno: 150)"
+)
+```
+
