--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -108,4 +108,22 @@ _mysql_exceptions.OperationalError: (
     1005, "Can't create table '\\db_name\\.#sql-4a8_ab' (errno: 150)"
 )
 ```
+### MySQL数据库应用接口(API)驱动
+Python数据库API在PEP249中有说明. MySQL有三种突出的(prominent)驱动来实现这个API:
+
+- `MySQLdb`是一个自带的(native)驱动, 它由Andy Dustman开发, 并且支持时间超过了十年.
+- `mysqlclient`是`MySQLdb`的一个分支, 它对Python3支持的非常好(notably), 对MySQLdb来说, 它是插入式(drop-in)的替代选择. 在这本书
+   的创作期间, 如果你在Django中使用MySQL, 那么推荐你使用它.
+- `MySQL Connector/Python`来自Oracle, 它是一个纯python驱动--它不需要MySQL客户端库(client library)或者任何Python标准库之外的模块.
+
+所有这些驱动都是安全线程(thread-safe),并且提供连接池(connection pooling).
+在当前, `MySQLdb`是唯一一个不支持Python3的驱动.
+
+除了一个DB API(数据库应用接口)驱动之外, Django还需要一个适配器来从ORM(对象关系映射)访问数据库驱动. 虽然MySql Connector/python
+已经包含了自身, Django还是为MySQLdb/mysqlclient提供了一个适配器. 
+
+### mySQLdb
+Django需要MySQLdb 的版本为1.2.1p2或者更高.
+
+   
 
