--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -154,6 +154,19 @@ CREATE DATABASE <dbname> CHARACTER SET utf8;
 ```
 这么做将会确保所有的的表和列都默认使用UTF-8编码.
 
-### 校对(collation)设置
+### 排序规则(collation)设置
+排序规则设置是为了让一个列(a column)控制其数据排序顺序和字符串平等比较后的顺序. 可以在数据库范围(database-wide)层次, 每个表(per-table)
+层次,和每个列(per column)层次上设置它. 在MySQL文档中全面地(thoroughly)记载了排序规则设置. 在所有的情况中, 你可以直接对数据库表进行操作
+(manipulate)来进行排序设置;  Django没有提供在模型定义上的设置方法.
+
+默认地, 使用一个UTF-8数据库,MySQL将会使用`utf8_general_ci`排序规则. 这导致了所有的字符串都以不区分大小写(case-insensitive)行为来进行相等性比较(equality comparisions). 也就是说, `'Fred'`和`'freD'`在数据库层面上被认为是相等的. 如果你在一个字段上有一个唯一约束(unique constraint),
+尝试将`'aa'`和`'AA'`写进同一列是非法的, 这是因为他们使用默认的排序规则来使用比较其相等性.
+
+在很多情况中, 默认行为没有问题. 然而, 如果你想在一个特别的列或表中来进行区分大小写(case-sensitve)比较, 你需要使用`utf8_bin`来改变列或表.在这种
+情况下, 需要注意的主要的事情就是, 如果你使用MySQLdb 1.2.2, Django中的数据库后端在从数据库检索后, 返回的所有字符串类型都是字节字符串(bytestrings),而不是Unicode字符串. Django在正常情况下返回的一直是Unicode字符串, 因此这是一个非常剧烈的变化.
+
+返回的字符串的形式取决于开发者, 如果你需要返回的字符串是bytestrings, 那么可以设置你的表为`urf8_bin`排序规则. 使用这些列(such column),Django自身工作应该很顺畅(除了下面所述的表`contrib.sessions Session`和`contrib.admin LogEntry`), 但是有时它真的想要使用一致的数据(consistant data), 那么你敲代码时应该准备调用`django.utils.encoding.smart_text()` -- Django不会为你做这些工作(数据库后端层和模型填充层在内部是分离的,
+因此数据库层不知道它在特殊情况下需要创建这个协议(conversion)).
+
 
 
