--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -168,5 +168,16 @@ CREATE DATABASE <dbname> CHARACTER SET utf8;
 返回的字符串的形式取决于开发者, 如果你需要返回的字符串是bytestrings, 那么可以设置你的表为`urf8_bin`排序规则. 使用这些列(such column),Django自身工作应该很顺畅(除了下面所述的表`contrib.sessions Session`和`contrib.admin LogEntry`), 但是有时它真的想要使用一致的数据(consistant data), 那么你敲代码时应该准备调用`django.utils.encoding.smart_text()` -- Django不会为你做这些工作(数据库后端层和模型填充层在内部是分离的,
 因此数据库层不知道它在特殊情况下需要创建这个协议(conversion)).
 
+如果你正在使用MySQLdb 1.2.1p2, 即使使用`utf_bin`排序规则, Django的标准`CharField`类也会返回Unicode字符串. 然而, `TextField`字段将会返回
+一个`array.arrat`实例(从Python的标准`array`模块). Django为此不能为此做的很多, 因为, 再次说明, 当从数据库读取数据是, 创建所需约定的信息是不可得到的(available). 这个问题在MySQLdb 1.2.2中被修复, 因此如果你想要使用在`urf8_bin`规则下使用`TextField`, 要升级到1.2.2版本, 然后解决上述推荐的
+办法解决bytestrings问题(应该不难解决).
+
+若使用MySqldb 1.2.1p2或者1.2.2, 你应该决定对你的表使用`urf8_bin`排序规则, 你也应该对`django.contrib.sessions.models.Session`表(通常称作`django_session`)和`jango.contrib.admin.models.LogEntry`(通常称作`django_admin_log`)使用`utf8_general_ci`(默认)排序规则. 请注意,根据MySQL Unicode字符集, `utf8_general_ci`排序规则和`utf8_unicode_ci`进行比较, `utf8_general_ci`会更快, 但是正确性稍低(有稍许错误). 如果你的应用对此是可以接受的 你应该使用`utf8_general_ci`, 因为它更快. 如果不能接受(例如, 你需要German 字典顺序), 使用`utf8_unicode_ci`, 因为它更精确(accurate).
+
+
+**注意**
+模型表单集(formset)以区分大小写形式验证唯一字段(unique fields). 因此当使用不区分大小写排序规则,使用唯一字段值(仅从字母区分)的表单集将会通过验证,
+但是在调用`save()`时, 将会引起`IntegrityError`错误.
+
 
 
