--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -180,4 +180,60 @@ CREATE DATABASE <dbname> CHARACTER SET utf8;
 但是在调用`save()`时, 将会引起`IntegrityError`错误.
 
 
+### 链接数据库
+连接设置按一下顺序被使用:
 
+- OPTIONS.
+- NAME, USER, PASSWORD, HOST, PORT
+- MySQL option files. 
+
+换句话说, 如果你在OPTIONS中设置了数据库的名字, 这将会优先于NAME. 在MySQL选项文件(opition file)中将会重载任何东西. 这里是一个使用了MySQL选项文件的简单的配置:
+
+```
+# settings.py
+DATABASES = {
+    'default': {
+        'ENGINE': 'django.db.backends.mysql',
+        'OPTIONS': {'read_default_file': '/path/to/my.cnf',},
+    }
+}
+
+# my.cnf
+[client]
+database = NAME
+user = USER
+password = PASSWORD
+default-character-set = utf8 
+```
+几个其他的MySQLdb链接选项可能是有用的, 例如`ssl`, `init_command`,和`sql_mode`. 查阅MySQLdb文档可以获得更多的细节.
+
+### 创建你的表
+当Django生成概要(schema), 它不指定一个储存引擎, 因此表创建时将使用你的数据库服务器配置的储存引擎.
+
+最简单的方式是将你的数据库服务的默认引擎为你想要的引擎.
+
+如果你正在使用一个托管服务器(hosting server), 不能更改默认储存引擎, 你有以下两个选择:
+
+- 在表创建之后, 执行一个`ALTER TABLE`语句, 将表转换一个新的储存引擎(例如InnoDB):
+```
+ ALTER TABLE <tablename> ENGINE=INNODB;
+```
+如果你有大量的表, 这么做会很烦.
+
+- 另一个选项是在创建表之前, 使用`init_command`选项:
+```
+'OPTIONS':{          
+      'init_command': 'SET storage_engine=INNODB',
+  },
+
+```
+这在连接数据库上设置默认的储存引擎. 在你的表被创建之后, 你应该移除这个选项, 因为它添加了一个查询, 此查询仅仅在表创建给每个数据库连接时被需要.
+
+### 表名
+在最近的MySQL版本中有一些广为人知的问题, 当在特定条件下特定的SQL语句被执行时, 表的名字会被更改. 推荐你使用小写字母的表名, 如果可能的话, 避免任何
+可能由于这个行为的问题. 当Django从模型自动生成表名, 会使用小写字母的表名, 因此主要要考虑的情况是如果你要通过`db_table`参数重载表名.
+
+### 保存点(savepoints)
+Django ORM和 MySQL(当使用InnoDB储存引擎时)都支持数据库保存点.
+
+如果你使用MyISAM储存引擎, 请注意这种情况: 如果你尝试使用保存点的相关方法(savepoint-related)来处理API, 你将会收到数据库生成错误. 
