--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -236,4 +236,16 @@ default-character-set = utf8
 ### 保存点(savepoints)
 Django ORM和 MySQL(当使用InnoDB储存引擎时)都支持数据库保存点.
 
-如果你使用MyISAM储存引擎, 请注意这种情况: 如果你尝试使用保存点的相关方法(savepoint-related)来处理API, 你将会收到数据库生成错误. 
+如果你使用MyISAM储存引擎, 请注意这种情况: 如果你尝试使用保存点的相关方法(savepoint-related)来处理API, 你将会收到数据库生成错误. 这是因为侦测
+MySQL数据库/表的储存引擎是非常昂贵的操作, 因此它被决定--基于这些侦测的结果是不值得动态转换这些方法为空操作(no-op's).
+
+### 注意特殊字段
+#### Character Fields
+如果你对这种字段使用`unique=True`, 那么使用`VARCHAR`列类型储存的任何字段都有最大长度限制(max_length=255). 这条规则影响`CharField`, `SlugField`, 和`CommaSeparatedIntegerField`.
+
+#### Fractional Second (小数形式的秒) Support for Time and Datetime Fields
+MySQL 5.6.4或者更高版本可以储存fractional seconds, 这种形式可以提供包括一个小数的指示(例如DATETIME(6)). 更早的版本不支持. 另外, MySQLdb
+1.2.5或者更早的版本有一个bug, 此bug会组织MySQL fractional seconds的使用.
+
+
+
