--- a/高级数据库管理.md
+++ b/高级数据库管理.md
@@ -333,4 +333,31 @@ python manage.py migrate
 ## cleaning up Generated models(完成生成模型)
 正如你所预期的, 数据库内省并不完美, 因此你需要做一些工作来完成模型代码. 这里是一些解决生成模型的要点:
 
-- 每个数据库表都被转换成一个模型类(
+- 每个数据库表都被转换成一个模型类(例如: 在数据库表和模型类之间存在一个one-to-one的映射). 这意味着你将需要为任何many-to-many的表加入`ManyToManyField`对象重构(refactor)模型.(This means that you’ll need to refactor the models for any many-to-many join tables into ManyToManyField objects.)
+
+- 每个生成的模型为每个字段生成一个属性, 包括id主键字段. 然而, 如果一个模型没主键, 就要重新调用Django的自动添加Id主键字段. 因此, 你将想要移除任何看起来像下面的行:
+    ```
+    id = models.IntegerField(primary_key=True)
+    ```
+    不仅这些行是多余的, 而且如果你的应用要为这些表添加新的记录时,他们可能导致一些问题.
+
+- 每个字段类型(例如, charField, DateField)被在数据库中的列类型所对应(例如VARCHAR, DATE). 如果`inspectdb`不能映射一个列类型到一个模型字段类型
+    , 他将会使用`TextField`并且插入python注释'This field type is a guess'给生成模型中的相邻字段. 注意这些东西, 如果需要的话更改这些类型.
+    
+- 如果在你的数据库中的一个字段没有好的Django对应字段, 你可以安全的丢掉它. Django模型层不需要包含在你表中的素有字段.
+
+- 如果一个数据库列名是一个Python保留字(例如pass, class, 或者for), `inspectdb`将会添加`_field`给属性名并且设置`db_column`属性为真实的名字(例如, pass, class 或者for). 例如, 一个表有一个整数列,叫做`for`, 生成的模型将会有如下的一个字段:
+```
+for_field = models.IntegerField(db_column='for')
+```
+inspectdb将为这个字段会插入Python注释`‘Field renamed because it was a Python reserved word.’`
+
+- 如果你的数据库包含了指向其他表的表(正如大多数数据库所做的), 你可能需要重新整理生成模型的顺序, 以便指向其他模型的模型以合适的顺序排列.  例如, model Book有一个外键指向Author, model Author 应该在Book前被定义. 如果你需要在一个尚未定义的模型上创建一个关系, 你可以使用包含这个模型名字的的字符串, 而不是模型对象本身.
+
+- `inspectdb`为 PostgreSQL, MySQL, and SQLite侦测主键. 也就是说, 它将`primary_key=True`插入合适的地方. 对于其他的数据库, 你将需要为每个模型中的至少一个字段插入`primary_key=True`,因为Django模型需要有一个`primary_key`字段.
+
+- 外键侦测只在PostgreSQL中生效, 或者MySQL表中的特定类型也可行. 换句话说, 假设外键列是一个INT列, 外键字段将被作为IntegreField字段生成.
+
+## 测试和微调(tweak)
+这里是基础步骤--从这里你将想要微调Django生成的模型直到它们以你喜欢的方式工作. 试着通过Django数据库API访问你的数据, 试着通过Django管理站点编辑数据, 并且相应编辑模型文件.
+
